[tool.poetry]
name = "pom"
version = "0.1.0"
description = "A object mapper for Python"
authors = ["Johnny Wellington dos Santos <johnnywell@icloud.com>"]
license = "MIT"
packages = [
    { include = "pom" }
]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^8.3.5"
black = "^25.1.0"


[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
