[tool.poetry]
name = "pom"
version = "0.1.0"
description = "A object mapper for Python"
authors = ["Johnny Wellington dos Santos <johnnywell@icloud.com>"]
license = "MIT"
packages = [
    { include = "pom" }
]

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
debugpy = "^1.8.13"
pytest-xdist = "^3.6.1"
black = "^25.1.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
