[tool.poetry]
name = "pom"
version = "0.1.1-alpha"
description = "A object mapper for Python"
readme = "README.md"
authors = ["Johnny Wellington dos Santos <johnny@arbeitstudio.com.br>"]
license = "Apache-2.0"
packages = [
    { include = "pom", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
debugpy = "^1.8.13"
pytest-xdist = "^3.6.1"
black = "^25.1.0"
pydantic = "^2.11.3"

[tool.pytest.ini_options]
pythonpath = ["src"]
markers = [
    "performance: marks tests as a performance test intended to test the library performance",
]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

